--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="lolstudio.demo_java">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.CALL_PHONE" android:maxSdkVersion="23"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
